--- a/Raspberry_V1/templates/selection.html
+++ b/Raspberry_V1/templates/selection.html
@@ -14,11 +14,11 @@
     
     <div class="radial-container">
         <div class="radial">
-            <button class="dot off" id="off-btn" data-color="off" style="--ang: 0deg;">OFF</button>
-            <button class="dot crimson" data-color="red" style="--ang: 45deg;">CRIMSON</button>
-            <button class="dot azure" data-color="blue" style="--ang: 135deg;">AZURE</button>
-            <button class="dot amber" data-color="yellow" style="--ang: 225deg;">AMBER</button>
-            <button class="dot sage" data-color="green" style="--ang: 315deg;">SAGE</button>
+            <button class="dot off" id="off-btn" data-color="off">OFF</button>
+            <button class="dot crimson" data-color="red">CRIMSON</button>
+            <button class="dot azure" data-color="blue">AZURE</button>
+            <button class="dot amber" data-color="yellow">AMBER</button>
+            <button class="dot sage" data-color="green">SAGE</button>
         </div>
     </div>
     
