--- a/templates/selection.html
+++ b/templates/selection.html
@@ -2,6 +2,10 @@
 
 {% block title %}Selection - Scent Controller{% endblock %}
 
+{% block styles %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/selection.css') }}">
+{% endblock %}
+
 {% block content %}
 <div class="selection-container">
     <div class="selection-header">
