--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,9 @@
                 <a href="{{ url_for('schedule') }}" class="nav-link {% if request.endpoint == 'schedule' %}active{% endif %}">
                     Schedule
                 </a>
+                <a href="{{ url_for('information') }}" class="nav-link {% if request.endpoint == 'information' %}active{% endif %}">
+                    Information
+                </a>
             </div>
         </div>
     </nav>
