--- a/templates/selection.html
+++ b/templates/selection.html
@@ -56,11 +56,11 @@
         </div>
     </div>
     
-    <!-- Demo Description Container -->
-    <div id="demo-description" class="demo-description hidden">
-        <div class="demo-text">
-            <span id="demo-scent-name"></span>
-            <p id="demo-scent-description"></p>
+    <!-- Scent Description Container -->
+    <div id="scent-description" class="scent-description hidden">
+        <div class="scent-text">
+            <span id="scent-name"></span>
+            <p id="scent-description-text"></p>
         </div>
     </div>
 </div>
