--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -120,24 +120,14 @@
                     </select>
                 </div>
                 
-                <div class="form-row">
-                    <div class="form-group">
-                        <label for="cycle-time">Cycle Time</label>
-                        <select id="cycle-time" required>
-                            <option value="10">10 seconds</option>
-                            <option value="30">30 seconds</option>
-                            <option value="60" selected>60 seconds</option>
-                            <option value="120">120 seconds</option>
-                            <option value="180">180 seconds</option>
-                        </select>
-                    </div>
-                    
-                    <div class="form-group">
-                        <label for="duration">Duration</label>
-                        <select id="duration" required>
-                            <option value="5">5 seconds</option>
-                            <option value="10" selected>10 seconds</option>
-                        </select>
+                <div class="form-group">
+                    <label for="strength">Diffusion Strength</label>
+                    <div class="slider-container">
+                        <input type="range" id="strength-slider" class="strength-slider" 
+                               min="5" max="60" value="10" step="5">
+                        <div class="slider-value">
+                            <span id="strength-seconds">10</span>s of 60s
+                        </div>
                     </div>
                 </div>
                 
